--- a/app/components/Layout.module.css
+++ b/app/components/Layout.module.css
@@ -17,6 +17,7 @@
 .main {
   background-color: white;
   border-radius: 2px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   margin: 2rem;
   padding: 1rem;
 }
