--- a/app/components/Sponsor.module.css
+++ b/app/components/Sponsor.module.css
@@ -1,3 +1,26 @@
 .sponsor {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 1rem;
+  min-width: 90%;
   text-align: center;
+  text-decoration: none;
+}
+
+.name {
+  color: #363636;
+  font-size: 1rem;
+}
+
+@media (min-width: 678px) {
+  .sponsor {
+    min-width: 45%;
+  }
+}
+
+@media (min-width: 968px) {
+  .sponsor {
+    min-width: 30%;
+  }
 }
