--- a/app/pages/sponsors/sponsorship-info.module.css
+++ b/app/pages/sponsors/sponsorship-info.module.css
@@ -1,7 +1,7 @@
 .field {
+  border: 1px solid #363636;
   border-radius: 2px;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
+  padding: 0.75rem;
   width: 100%;
 }
 
@@ -11,6 +11,10 @@
 }
 
 .form {
+  align-items: center;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 3fr;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
