#1 continuing to style sponsorship info page and changing color of links.

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -3,11 +3,11 @@
 }
 
 a {
-  color: rgba(219, 39, 119);
+  color: rgba(191, 82, 114);
 }
 
 body {
-  background-color: rgba(252, 231, 243);
+  background-color: rgba(191, 82, 114, 0.2);
 }
 
 h1 {
