--- a/app/pages/sponsors/sponsorship-info.module.css
+++ b/app/pages/sponsors/sponsorship-info.module.css
@@ -1,13 +1,18 @@
 .field {
   border: 1px solid #363636;
   border-radius: 2px;
+  display: inline-block;
   padding: 0.75rem;
   width: 100%;
 }
 
 .field:focus {
-  box-shadow: 0 0 0 2px rgba(219, 39, 119);
-  outline: rgba(219, 39, 119);
+  box-shadow: 0 0 0 2px rgba(191, 82, 114);
+  outline: 2px solid rgba(191, 82, 114);
+}
+
+.fieldinfo {
+  display: flex;
 }
 
 .form {
@@ -15,19 +20,39 @@
   display: grid;
   gap: 1rem;
   grid-template-columns: 1fr 3fr;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+  margin: 2rem auto;
+  width: 100%;
 }
 
 .submit {
-  background-color: rgba(219, 39, 119);
+  background-color: rgba(191, 82, 114);
   border: 1px solid transparent;
   border-radius: 2px;
   color: white;
-  padding: 0.25rem 0.5rem;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  padding: 0.5rem 1rem;
 }
 
 .submit:hover {
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+@media (min-width: 678px) {
+  .form {
+    width: 75%;
+  }
+
+  .submit {
+    align-self: center;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    justify-self: right;
+  }
+}
+
+@media (min-width: 900px) {
+  .form {
+    width: 66%;
+  }
 }
