--- a/app/pages/sponsors/sponsorship-info.module.css
+++ b/app/pages/sponsors/sponsorship-info.module.css
@@ -27,6 +27,7 @@
   border: 1px solid transparent;
   border-radius: 2px;
   color: white;
+  font-size: 1rem;
   padding: 0.75rem 1.5rem;
   width: 100%;
 }
