--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -14,6 +14,18 @@ h1 {
   text-align: center;
 }
 
+hr {
+  margin: 2rem 1rem;
+  border: none;
+  border-top: 1px solid rgba(191, 82, 114);
+}
+
 .center-text {
   text-align: center;
+}
+
+.split-view {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 2rem;
 }
