--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -20,6 +20,28 @@ hr {
   border-top: 1px solid rgba(191, 82, 114);
 }
 
+table {
+  border: 3px solid rgba(191, 82, 114);
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
+  table-layout: fixed;
+  width: 100%;
+}
+
+table td,
+table th {
+  padding: 0.5rem;
+}
+
+table tr td:nth-child(2) {
+  font-weight: bold;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: rgba(191, 82, 114, 0.2);
+}
+
 .center-text {
   text-align: center;
 }
@@ -45,5 +67,8 @@ hr {
   .two-column {
     display: grid;
     grid-template-columns: 1fr 1fr;
+  }
+  table {
+    width: 75%;
   }
 }
