--- a/app/components/Speaker.module.css
+++ b/app/components/Speaker.module.css
@@ -41,7 +41,7 @@
   .speaker {
     text-decoration: none;
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
     border-radius: 16px;
     background-color: #d17b93;
     margin: 1rem;
@@ -53,5 +53,13 @@
 
   .speaker > div:first-of-type {
     aspect-ratio: auto;
+  }
+}
+
+@media (min-width: 1100px) {
+  .speaker {
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
