adding new image on home page. replacing logo with pumpkin logo.

--- a/app/components/Layout.module.css
+++ b/app/components/Layout.module.css
@@ -12,8 +12,7 @@
 
 .logo {
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
 
 .main {
@@ -42,6 +41,8 @@
 
   .logo {
     width: 50%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .main {
