--- a/app/components/Layout.module.css
+++ b/app/components/Layout.module.css
@@ -3,7 +3,7 @@
   color: #ebebeb;
   display: flex;
   justify-content: space-between;
-  margin: 0.5rem;
+  margin: 0.5rem 0.5rem 2rem 0.5rem;
 }
 
 .footerlink {
@@ -17,7 +17,7 @@
 }
 
 .main {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.85);
   border-radius: 2px;
   border: 2px solid white;
   margin: 0.5rem;
@@ -36,7 +36,7 @@
 
 @media (min-width: 678px) {
   .footer {
-    margin: 1rem auto;
+    margin: 1rem auto 3rem auto;
     width: 66%;
   }
 
