--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -11,14 +11,15 @@
   text-decoration: none;
 }
 
-.logo {
-  width: 100%;
-  text-align: center;
+.logo a {
+  display: flex;
+  justify-content: space-around;
 }
 
 .logo img {
   margin-top: 0.5rem;
   filter: drop-shadow(0px 0px 7px rgb(191, 82, 114));
+  width: 90%;
 }
 
 .main {
