--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -11,13 +11,18 @@
   text-decoration: none;
 }
 
+.footer svg {
+  height: 1rem;
+  margin: 0.5rem;
+}
+
 .logo a {
   display: flex;
   justify-content: space-around;
 }
 
-.logo img {
-  margin-top: 0.5rem;
+.logo svg {
+  margin: 1rem;
   filter: drop-shadow(0px 0px 7px rgb(191, 82, 114));
   width: 90%;
 }
