--- a/src/components/Layout/MobileNav/MobileNav.module.css
+++ b/src/components/Layout/MobileNav/MobileNav.module.css
@@ -35,9 +35,10 @@
   align-items: center;
   height: 100%;
   list-style-type: none;
+  padding-left: 0;
 }
 
-.mobileNav li svg{
+.mobileNav .logo {
   width: 90%;
   filter: drop-shadow(0px 0px 7px rgb(191, 82, 114));
 }
