Various site improvements
Expand about conf section on homepage
Move tl;dr on COVID page to top
Add link to virtual ticket on FAQ page
Update venue page
Add YouTube link to footer
Add prettier and fix pages

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -6,6 +6,11 @@
   margin: 0.5rem 0.5rem 2rem 0.5rem;
 }
 
+.socialLinks {
+  display: flex;
+  gap: 1rem;
+}
+
 .footerlink {
   color: #ebebeb;
   text-decoration: none;
