--- a/src/components/Speaker/Speaker.module.css
+++ b/src/components/Speaker/Speaker.module.css
@@ -39,7 +39,7 @@
 
 .name {
   font-size: 2rem;
-  font-family: 'Creepster', 'Roboto', Helvetica, sans-serif;
+  font-family: "Creepster", "Roboto", Helvetica, sans-serif;
 }
 
 .pronouns {
