--- a/src/components/Layout/NavBar/NavBar.module.css
+++ b/src/components/Layout/NavBar/NavBar.module.css
@@ -1,5 +1,8 @@
 .navbar {
   display: none;
+  max-width: 66%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (min-width: 840px) {
