--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Creepster&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Creepster&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap");
 
 * {
   font-family: "Source Sans 3", sans-serif;
@@ -14,7 +14,7 @@ body {
 }
 
 h1 {
-  font-family: 'Creepster', 'Source Sans 3', Helvetica, sans-serif;
+  font-family: "Creepster", "Source Sans 3", Helvetica, sans-serif;
   font-size: 3rem;
   text-align: center;
 }
@@ -49,6 +49,12 @@ tbody tr:nth-child(odd) {
 
 .center-text {
   text-align: center;
+}
+
+.center-text p {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .split-view,
