--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Creepster&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Creepster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap');
 
 * {
-  font-family: "Source Sans 3", sans-serif;
+  font-family: 'Source Sans 3', sans-serif;
 }
 
 a {
@@ -14,7 +14,7 @@ body {
 }
 
 h1 {
-  font-family: "Creepster", "Source Sans 3", Helvetica, sans-serif;
+  font-family: 'Creepster', 'Source Sans 3', Helvetica, sans-serif;
   font-size: 3rem;
   text-align: center;
 }
