--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,6 @@ hr {
 }
 
 table {
-  border: 3px solid var(--magnoliajs-pink);
   border-collapse: collapse;
   margin-left: auto;
   margin-right: auto;
@@ -42,6 +41,20 @@ table {
 table td,
 table th {
   padding: 0.5rem;
+}
+
+table th {
+  font-family: 'Creepster', 'Source Sans 3', Helvetica, sans-serif;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+table td {
+  text-align: left;
+}
+
+table tr th:nth-child(1) {
+  width: 10%;
 }
 
 table tr td:nth-child(2) {
